--- a/financas-app/package.json
+++ b/financas-app/package.json
@@ -13,7 +13,8 @@
     "next": "^14.2.1",
     "react": "^18",
     "react-bootstrap": "^2.10.2",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.1.0"
   },
   "devDependencies": {
     "eslint": "^8",
